--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,25 +2,20 @@
 <main>
     <h1 class="text-center">Buscador Rick & Morty</h1>
 
-    <div class="d-flex justify-content-end" style="margin-bottom: 1%; margin-right: 2rem;">
-        <!-- Selector de página -->
-        <nav aria-label="...">
+    <div class="d-flex justify-content-end">
+        {% if images.paginator.page_range %}
+        <nav aria-label="Page navigation">
             <ul class="pagination">
-                <li class="page-item disabled">
-                    <a class="page-link">⬅️</a>
+                {% for page_number in images.paginator.page_range %}
+                <li class="page-item {% if images.number == page_number %}active{% endif %}">
+                    <a class="page-link" href="{% url 'home' page_number %}">{{ page_number }}</a>
                 </li>
-                <li class="page-item active" aria-current="page">
-                    <a class="page-link" href="#">1</a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="#">2</a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#">➡️</a>
-                </li>
+                {% endfor %}
             </ul>
         </nav>
+        {% else %}
+        <p class="text-center">No hay más páginas para mostrar.</p>
+        {% endif %}
     </div>
 
     <div class="d-flex justify-content-center" style="margin-bottom: 1%">
