--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,7 +1,8 @@
 <footer class="bg-body-tertiary text-center text-lg-start fixed-bottom">
-    <div class="text-center p-3" style="display: flex;background-color: rgb(255 255 255 / 78%);justify-content: space-between;">
-        <strong>Introducción a la Programación | UNGS</strong>
+    <div class="text-center p-3" style="display: flex;background-color: rgba(70, 70, 70, 0.493);justify-content: space-between;">
+        <strong>Introducción a la Programación | UNGS</strong> <img class="logoungs"  src="https://www.ungs.edu.ar/wp-content/uploads/2024/06/logo_ungs_512.png">
         <strong>{{VERSION}}</strong>
+        
     </div>
 </footer>
 </body>
