--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,11 @@
 {% extends 'header.html' %} {% block content %} {% if request.user.is_authenticated %}
-<h2 class="text-center">Bienvenido {{ user.username | upper }}!</h2>
-{% else %}
-<h2 class="text-center">Bienvenido!</h2>
-{% endif %}
-<p class="text-center">
-    Mirá las imágenes desde <a href="{% url 'home' %}">este link.</a>
-</p>
+<div class="bienvenida">
+    <h2 class="text-center">Bienvenido {{ user.username | upper }}!</h2>
+    {% else %}
+    <h2 class="text-center">Bienvenido!</h2>
+    {% endif %}
+    <p class="text-center">
+        Mirá las imágenes desde <a href="{% url 'home' %}" class="este_link">este link.</a>
+    </p>
+</div>
 {% endblock %}
