--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,17 +1,26 @@
 {% extends 'header.html' %} {% block content %}
+<head>
+    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %} {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'login.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
+
+</head>
 <div class="login-form" style="text-align: center;">
     <form action="{% url 'login' %}" method="POST" style="display: inline-block;">
-        {% csrf_token %}
-        <h2 class="text-center">Inicio de sesión</h2>
-        <div class="form-group" style="margin-bottom: 5%;">
-            <input type="text" name="username" id="username" class="form-control" placeholder="Usuario" required="required">
-        </div>
-        <div class="form-group" style="margin-bottom: 5%;">
-            <input type="password" name="password" id="password" class="form-control" placeholder="Contraseña" required="required">
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block">Ingresar</button>
+        <div class="login-form1">
+            {% csrf_token %}
+            <h2 class="text-center">Iniciar sesión</h2>
+            <div class="form-group" style="margin-bottom: 5%;">
+                <input type="text" name="username" id="username" class="form-control" placeholder="Usuario" required="required">
+            </div>
+            <div class="form-group" style="margin-bottom: 5%;">
+                <input type="password" name="password" id="password" class="form-control" placeholder="Contraseña" required="required">
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary btn-block ingresar">Ingresar</button>
+            </div>
         </div>
     </form>
+    </div>
 </div>
 {% endblock %}
