Funciona el loading spinner e hice algunos retoques a la interfaz gráfica

--- a/app/templates/favourites.html
+++ b/app/templates/favourites.html
@@ -1,4 +1,9 @@
 {% extends 'header.html' %} {% block content %}
+<style>
+    body {
+        overflow-y: scroll;
+    }
+</style>
 <div class="container-xl">
     <div class="table-responsive">
         <div class="table-wrapper">
