--- a/static/styles.css
+++ b/static/styles.css
@@ -130,7 +130,7 @@ table.table td i {
 
 }
 .page-item.active .page-link{
-    background: #333538;
+    background: #00759c;
 }
 .pagination li a:hover {
     color: #999;
