--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,6 +1,5 @@
-{% extends 'header.html' %} {% block content %}
-<head>
-    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %} {% load static %}
+{% extends 'header.html' %} {% block content %} {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %} {% load static %}
+
     <link rel="stylesheet" type="text/css" href="{% static 'login.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
 
