--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -25,19 +25,26 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}"><strong>Galería</strong></a>
                     </li>
+
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'favoritos' %}">Favoritos</a>
                     </li>
+                </ul>
                     {% endif %}
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto d-flex justify-content-end">
+                        <li class="nav-item">
+                            {% if request.user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'logout' %}">Cerrar sesión</a> {% else %}
+                            <a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a> {% endif %}
+                        </li>
                     <li class="nav-item">
-                        {% if request.user.is_authenticated %}
-                        <a class="nav-link" href="{% url 'logout' %}">Salir</a> {% else %}
-                        <a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a> {% endif %}
+                            {% if not request.user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'register' %}">Registrarse</a> {% endif %}
                     </li>
                 </ul>
-
-
             </div>
         </div>
     </nav>
