--- a/static/styles.css
+++ b/static/styles.css
@@ -6,6 +6,8 @@ body {
     overflow-y: hidden;   
     width: 1920px;
     height: 1080px;
+    outline: none;
+    user-select: none;
 }
 
 .table-responsive {
@@ -160,24 +162,51 @@ table.table td i {
 
 
 /* Input y buscar */
-
-.inputbusca, .buscar{
+.inputbusca{
+    width: 300px;
+    padding: 10px;
+    border: 0px solid #ddd; /* Borde suave */
+    border-bottom: 1px solid #ddd;
+    font-size: 16px;
+    background-color: rgb(255, 165, 0, 0);
+    color: white;
+}
+.inputbusca:hover, .inputbusca:active, .inputbusca:focus{
+    background-color: rgb(255, 165, 0, 0);
+    color: white;
+    box-shadow: 0 0px 7px 1px #198754af;
+}
+.inputbusca, .buscar, .lupa{
     transition: all 0.5s ease;
 }
+
 .buscar{
+    background-color: #198754;
     outline: none !important;
     box-shadow: none !important; 
 }
+.buscar:hover{
+    box-shadow: 0 0px 7px 1px #198754af;
 
-.buscar:hover, .inputbusca:hover{
-    transition: all 0.5s ease;
-    transform: scale(1.05);
 }
 .buscar:active{
     transition: all 0.1s ease;
     transform: scale(0.98);
-    background-color: #12633d!important;
 }
+.lupa{
+    width: 20px;
+    height: 20px;
+}
+.buscar:hover .lupa{
+    transition: all 0.5s ease;
+    transform: scale(1.15);
+}
+
+.buscar:hover, .inputbusca:hover{
+    transition: all 0.5s ease;
+    transform: scale(1.03);
+}
+
 
 
 
@@ -213,8 +242,14 @@ table.table td i {
     flex-grow: 1; 
     text-align: left; 
     transition: color 0.3s ease, text-shadow 0.3s ease, transform 0.3s ease;
+    cursor: pointer;
+
 }
+
+
+
 strong{
+    transition: color 0.3s ease, text-shadow 0.3s ease, transform 0.3s ease;
     font-weight: normal;
 }
 
@@ -228,22 +263,24 @@ strong{
 .card.border-success:hover {
     box-shadow: 0 4px 15px rgba(0, 255, 0, 0.5);
 }
+.card.border-success:hover .card-title,
+.card.border-success:hover strong{
+    color: rgb(0, 200, 0);
+    text-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+}
 .card.border-danger:hover {
     box-shadow: 0 4px 15px rgba(255, 0, 0, 0.5); 
+}
+.card.border-danger:hover .card-title,
+.card.border-danger:hover strong{
+    color: rgb(200, 0, 0);
+    text-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
 }
 .card.border-warning:hover {
     box-shadow: 0 4px 15px rgba(255, 165, 0, 0.5);
 }
-
-.card-title.success:hover {
-    color: rgb(0, 200, 0);
-    text-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
-}
-.card-title.danger:hover {
-    color: rgb(200, 0, 0);
-    text-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
-}
-.card-title.warning:hover {
+.card.border-warning:hover .card-title,
+.card.border-warning:hover strong{
     color: rgb(255, 165, 0);
     text-shadow: 0 0 10px rgba(255, 165, 0, 0.5);
 }
@@ -255,7 +292,6 @@ strong{
     background-color: rgba(255, 255, 255, 0) !important;
     border: none !important;
     transition: color 0.3s ease, text-shadow 0.3s ease, transform 0.3s ease;
-    
 }
 .corazon:hover, .fav:hover{
     color: #fff;
@@ -264,7 +300,7 @@ strong{
     transform: scale(1.35)!important;
 }
 .corazon:hover{
-    text-shadow: 0 0 10px rgba(255, 0, 0, 0.925);
+    text-shadow: 0 0 10px rgba(255, 0, 0);
 }
 
 .corazon:active, .corazon:focus {
@@ -283,7 +319,7 @@ strong{
     border-radius: 15px;
     background-color: rgb(39, 43, 51);
     font-size: 16px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 5px 5px 20px 1px rgb(0 0 0 / 42%);
     transition: all 0.3s ease;
     outline: none;
     display: flex;
@@ -336,16 +372,61 @@ h1 {
     color: white;
 }
 
-.nav-link, a{
+.nav-link{
     color: white;
+    transition: all 0.5s ease;
+}
+.nav-link:hover{
+    color: white;
+    transform: scale(1.05);
+    box-shadow: 0px 0px 10px 1px rgb(127 127 127 / 50%);
+}
+.este_link{
+    color: #ffffff!important;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 15px;
+    text-decoration: none;
+    background-color: #1d59ff!important;
+    outline: none !important;
+    box-shadow: none !important; 
+    transition: color 0.3s ease, text-shadow 0.3s ease, transform 0.3s ease;
+}
+.este_link:hover{
+    transition: all 0.3s ease;
+    transform: scale(1.02);
+    background-color: #0044ff!important;
+}
+.este_link:active{
+    transition: all 0.1s ease;
+    transform: scale(1);
+    background-color: #0041f3!important;
 }
 
-.este_link{
-    color: #0d6efd!important;
-}
 
 .bienvenida{
     margin: 250px auto;
     padding: 15px;
     background-color: rgba(70, 70, 70, 0.493);
+}
+#saludo::first-letter {
+    text-transform: uppercase;
+}
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em;
+}
+
+.imagen{
+    margin-left: 10px;
+    width: 22px;
+    height: 22px;
+}
+.boton-header{
+    margin-left: 10px;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: #202329;
 }
